fix: :bug: resolve problem with module resolution and module

--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "moduleResolution": "Bundler",
     "lib": ["DOM", "ESNext", "DOM.Iterable", "ES2020"],
+    "module": "ESNext",
     "types": ["vite/client"]
   }
 }
