fix: :bug: resolve json modules in app its necessary for read package.json file

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -4,6 +4,7 @@
     "declaration": false,
     "sourceMap": true,
     "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
     "types": ["@types/node"]
   }
 }
